--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.5",
+    "formidable": "^3.5.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
