Fix-SPA-routing-on-Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ],
     "functions": {
         "api/parse-resume.js": {
             "memory": 1024,
